[package]
authors = ["Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>"]
categories = [
    "network-programming",
    "web-programming",
    "database",
]
description = "Nitox is a `tokio`-based client for NATS."
documentation = "https://docs.rs/nitox"
homepage = "https://github.com/YellowInnovation/nitox"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "nats",
    "async",
    "tokio",
]
license = "MIT/Apache-2.0"
name = "nitox"
readme = "README.md"
repository = "https://github.com/YellowInnovation/nitox"
version = "0.1.6"

[[bench]]
harness = false
name = "nitox_parser_benchmark"

[dependencies]
bytes = "0.4"
derive_builder = "0.7"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
log = "0.4"
native-tls = "0.2"
parking_lot = "0.6"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio-codec = "0.1"
tokio-executor = "0.1"
tokio-tcp = "0.1"
tokio-tls = "0.2"
url = "1.7"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0"

[dev-dependencies]
criterion = "0.2"
env_logger = "0.5"
tokio = "0.1"
